--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -7,12 +7,25 @@
     android:padding="5pt"
     android:orientation="vertical"
     tools:context=".GraphActivity">
-    <LinearLayout
-        android:id="@+id/rangeButtons"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="20pt"
-        android:orientation="horizontal">
-    </LinearLayout>
+        android:layout_height="20pt">
+        <LinearLayout
+            android:id="@+id/rangeButtons"
+            android:layout_width="match_parent"
+            android:layout_height="20pt"
+            android:layout_alignParentStart="true"
+            android:orientation="horizontal">
+        </LinearLayout>
+        <ProgressBar
+            android:id="@+id/spinner"
+            android:layout_width="20pt"
+            android:layout_height="20pt"
+            android:progressDrawable="@drawable/ic_spinner"
+            android:layout_alignParentEnd="true"/>
+
+
+    </RelativeLayout>
     <com.jjoe64.graphview.GraphView
         android:id="@+id/viewGraph"
         android:layout_width="match_parent"
