--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,137 +8,167 @@
 
     <heizi.heizi.HeiziTextView
         android:id="@+id/title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="27pt"
-        android:layout_marginTop="48pt"
+        android:layout_row="0"
+        android:layout_column="0"
         android:text="Heizi"
         android:textAlignment="center"
         android:textColor="#FF0000"
-        android:textSize="24pt" />
+        android:textSize="24pt"
+        app:layout_constraintBottom_toTopOf="@+id/dataGrid"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25" />
 
     <GridLayout
         android:id="@+id/dataGrid"
-        android:layout_below="@+id/title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20pt"
-        android:layout_marginStart="40pt"
-        android:columnCount="2"
         android:layout_centerInParent="true"
-        android:rowCount="4">
+        android:columnCount="2"
+        android:rowCount="4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintBottom_toTopOf="@id/dataAge">
 
         <heizi.heizi.HeiziTextView
             android:id="@+id/labelTag"
+            android:layout_width="60pt"
+            android:layout_height="27pt"
             android:text="TAG"
             android:textAlignment="textStart"
-            android:textSize="24pt"
             android:textColor="#FF0000"
-            android:layout_width="60pt"
-            android:layout_height="27pt" />
+            android:textSize="24pt" />
+
         <heizi.heizi.HeiziTextView
             android:id="@+id/valueTag"
-            android:textAlignment="textEnd"
-            android:textSize="24pt"
-            android:textColor="#FF0000"
             android:layout_width="80pt"
-            android:layout_height="27pt" />
+            android:layout_height="27pt"
+            android:textAlignment="textEnd"
+            android:textColor="#FF0000"
+            android:textSize="24pt" />
+
         <heizi.heizi.HeiziTextView
             android:id="@+id/labelTy"
+            android:layout_width="60pt"
+            android:layout_height="27pt"
             android:text="TY"
             android:textAlignment="textStart"
-            android:textSize="24pt"
             android:textColor="#FF0000"
-            android:layout_width="60pt"
-            android:layout_height="27pt" />
+            android:textSize="24pt" />
+
         <heizi.heizi.HeiziTextView
             android:id="@+id/valueTy"
-            android:textAlignment="textEnd"
-            android:textSize="24pt"
-            android:textColor="#FF0000"
             android:layout_width="80pt"
-            android:layout_height="27pt" />
+            android:layout_height="27pt"
+            android:textAlignment="textEnd"
+            android:textColor="#FF0000"
+            android:textSize="24pt" />
+
         <heizi.heizi.HeiziTextView
             android:id="@+id/labelPo"
+            android:layout_width="60pt"
+            android:layout_height="27pt"
             android:text="PO"
             android:textAlignment="textStart"
-            android:textSize="24pt"
             android:textColor="#FF0000"
-            android:layout_width="60pt"
-            android:layout_height="27pt" />
+            android:textSize="24pt" />
+
         <heizi.heizi.HeiziTextView
             android:id="@+id/valuePo"
-            android:textAlignment="textEnd"
-            android:textSize="24pt"
-            android:textColor="#FF0000"
             android:layout_width="80pt"
-            android:layout_height="27pt" />
+            android:layout_height="27pt"
+            android:textAlignment="textEnd"
+            android:textColor="#FF0000"
+            android:textSize="24pt" />
+
         <heizi.heizi.HeiziTextView
             android:id="@+id/labelPu"
+            android:layout_width="60pt"
+            android:layout_height="27pt"
             android:text="PU"
             android:textAlignment="textStart"
-            android:textSize="24pt"
             android:textColor="#FF0000"
-            android:layout_width="60pt"
-            android:layout_height="27pt" />
+            android:textSize="24pt" />
+
         <heizi.heizi.HeiziTextView
             android:id="@+id/valuePu"
-            android:textAlignment="textEnd"
-            android:textSize="24pt"
-            android:textColor="#FF0000"
             android:layout_width="80pt"
-            android:layout_height="27pt" />
+            android:layout_height="27pt"
+            android:layout_row="0"
+            android:textAlignment="textEnd"
+            android:textColor="#FF0000"
+            android:textSize="24pt" />
     </GridLayout>
+
     <heizi.heizi.HeiziTextView
         android:id="@+id/dataAge"
-        android:textAlignment="center"
-        android:textSize="20pt"
-        android:textColor="#FF0000"
-        android:layout_marginTop="16pt"
+        android:layout_width="wrap_content"
+        android:layout_height="27pt"
         android:layout_below="@id/dataGrid"
-        android:layout_width="match_parent"
-        android:layout_height="27pt" />
+        android:textAlignment="center"
+        android:textColor="#FF0000"
+        android:textSize="20pt"
+        app:layout_constraintTop_toBottomOf="@+id/dataGrid"
+        app:layout_constraintBottom_toTopOf="@+id/message"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <heizi.heizi.HeiziTextView
         android:id="@+id/message"
-        android:textAlignment="center"
-        android:textSize="10pt"
-        android:textColor="#FF0000"
+        android:layout_width="wrap_content"
+        android:layout_height="20pt"
         android:layout_below="@id/dataAge"
-        android:layout_marginTop="27pt"
-        android:layout_width="match_parent"
-        android:layout_height="20pt" />
+        android:textAlignment="center"
+        android:textColor="#FF0000"
+        android:textSize="10pt"
+        app:layout_constraintTop_toBottomOf="@id/dataAge"
+        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="wrap_content"
         android:layout_height="50pt"
         android:layout_margin="5pt"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dataGrid"
+        app:layout_constraintVertical_bias="1.0">
+
         <ImageButton
             android:id="@+id/locateButton"
-            android:src="@drawable/ic_dish"
+            android:layout_width="26pt"
+            android:layout_height="26pt"
+            android:layout_margin="5pt"
+            android:adjustViewBounds="true"
             android:background="@null"
             android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            android:layout_margin="5pt"
-            android:layout_width="26pt"
-            android:layout_height="26pt" />
+            android:src="@drawable/ic_dish" />
+
         <ImageButton
             android:id="@+id/refreshButton"
-            android:src="@drawable/ic_refresh"
+            android:layout_width="26pt"
+            android:layout_height="26pt"
+            android:layout_margin="5pt"
+            android:adjustViewBounds="true"
             android:background="@null"
             android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            android:layout_margin="5pt"
-            android:layout_width="26pt"
-            android:layout_height="26pt" />
+            android:src="@drawable/ic_refresh" />
+
         <ImageButton
             android:id="@+id/graphButton"
-            android:src="@drawable/ic_graph"
+            android:layout_width="26pt"
+            android:layout_height="26pt"
+            android:layout_margin="5pt"
+            android:adjustViewBounds="true"
             android:background="@null"
             android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            android:layout_margin="5pt"
-            android:layout_width="26pt"
-            android:layout_height="26pt" />
+            android:src="@drawable/ic_graph" />
     </GridLayout>
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
