--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="heizi.heizi.MainActivity">
@@ -27,81 +28,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:columnCount="2"
+        android:columnCount="1"
         android:rowCount="4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintBottom_toTopOf="@id/dataAge">
-
-        <heizi.heizi.HeiziTextView
-            android:id="@+id/labelTag"
-            android:layout_width="60pt"
-            android:layout_height="27pt"
-            android:text="TAG"
-            android:textAlignment="textStart"
-            android:textColor="#FF0000"
-            android:textSize="24pt" />
-
-        <heizi.heizi.HeiziTextView
-            android:id="@+id/valueTag"
-            android:layout_width="80pt"
-            android:layout_height="27pt"
-            android:textAlignment="textEnd"
-            android:textColor="#FF0000"
-            android:textSize="24pt" />
-
-        <heizi.heizi.HeiziTextView
-            android:id="@+id/labelTy"
-            android:layout_width="60pt"
-            android:layout_height="27pt"
-            android:text="TY"
-            android:textAlignment="textStart"
-            android:textColor="#FF0000"
-            android:textSize="24pt" />
-
-        <heizi.heizi.HeiziTextView
-            android:id="@+id/valueTy"
-            android:layout_width="80pt"
-            android:layout_height="27pt"
-            android:textAlignment="textEnd"
-            android:textColor="#FF0000"
-            android:textSize="24pt" />
-
-        <heizi.heizi.HeiziTextView
-            android:id="@+id/labelPo"
-            android:layout_width="60pt"
-            android:layout_height="27pt"
-            android:text="PO"
-            android:textAlignment="textStart"
-            android:textColor="#FF0000"
-            android:textSize="24pt" />
-
-        <heizi.heizi.HeiziTextView
-            android:id="@+id/valuePo"
-            android:layout_width="80pt"
-            android:layout_height="27pt"
-            android:textAlignment="textEnd"
-            android:textColor="#FF0000"
-            android:textSize="24pt" />
-
-        <heizi.heizi.HeiziTextView
-            android:id="@+id/labelPu"
-            android:layout_width="60pt"
-            android:layout_height="27pt"
-            android:text="PU"
-            android:textAlignment="textStart"
-            android:textColor="#FF0000"
-            android:textSize="24pt" />
-
-        <heizi.heizi.HeiziTextView
-            android:id="@+id/valuePu"
-            android:layout_width="80pt"
-            android:layout_height="27pt"
-            android:layout_row="0"
-            android:textAlignment="textEnd"
-            android:textColor="#FF0000"
-            android:textSize="24pt" />
+        <heizi.heizi.DataRowView
+            android:id="@+id/rowTag"
+            custom:label="TAG"/>
+        <heizi.heizi.DataRowView
+            android:id="@+id/rowTy"
+            custom:label="TY"/>
+        <heizi.heizi.DataRowView
+            android:id="@+id/rowPo"
+            custom:label="PO"/>
+        <heizi.heizi.DataRowView
+            android:id="@+id/rowPu"
+            custom:label="PU"/>
     </GridLayout>
 
     <heizi.heizi.HeiziTextView
