--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="20pt">
         <LinearLayout
-            android:id="@+id/rangeButtons"
+            android:id="@+id/buttons"
             android:layout_width="match_parent"
             android:layout_height="20pt"
             android:layout_alignParentStart="true"
